<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cairan"
        android:icon="@drawable/cairan"
        android:title="@string/title_cairan" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/about"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_emergency"
        android:icon="@drawable/baseline_emergency_24"
        android:title="@string/title_emergency" />
</menu>